# yamark

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: markdown-support-workpad.md  vscode-quarto-formatter-limitations.md
editors/vscode/: .vscodeignore  LICENSE  README.md  package.json
external-tests/: _support.py  run.py
external-tests/cli/: test_check_diff.py  test_config.py  test_git_filter.py  test_help.py  test_rejections.py  test_runner_help.py  test_semantic_invariants.py  test_stdin.py  test_workspace.py  test_yaml_semantics.py
external-tests/corpus/: test_pathological.py
external-tests/smoke/: test_frontmatter.py  test_markdown.py
external-tests/snapshots/: test_golden_snapshots.py
external-tests/support/: yaml_suite_value.py
src/: cli.rs  config.rs  diagnostic.rs  lib.rs  main.rs  workspace.rs
src/core/: directives.rs  document.rs  emit.rs  format_trace.rs  markdown.rs  markdown_marker.rs  mod.rs  parser.rs  source.rs  source_lang.rs  wrap.rs  yaml.rs  yaml_model.rs  yaml_scan.rs
src/plugins/: external.rs  mod.rs  registry.rs
tests/: benchmark_tools.rs  cli_cases.rs  format_trace.rs  mark_formatting_specs.rs  markdown_plan.rs  python_cli.rs  python_smoke.rs  spec_cli.rs  website.rs  yaml_ast.rs  yaml_performance.rs  yaml_scan.rs  yaml_suite.rs  yaml_suite_bootstrap.rs
tests/cases/: README.md  frontmatter.case  (+40 more)
tools/: bootstrap-yaml-test-suite-data.py
website/: .gitignore  404.qmd  _benchmark-data.R  _quarto.yml  benchmarks.html.md  benchmarks.qmd  cli-help.html.md  cli-help.qmd  editors.qmd  examples.html.md  examples.qmd  git-filter.html.md  index.html.md  index.qmd  reference.qmd  styles.css  usage.qmd
(+19 files in other folders)
