[package]
name = "yamark"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Format YAML and Markdown with yamark."
readme = "README.md"
repository = "https://github.com/t-kalinowski/yamark"
homepage = "https://t-kalinowski.github.io/yamark/"
license = "MIT"
keywords = ["formatter", "markdown", "yaml"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[lib]
name = "yamark"
path = "src/lib.rs"

[features]
default = []
format-trace = []

[[bin]]
name = "yamark"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ignore = "0.4.25"
memchr = "2.8.1"
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"
unicode-width = "0.2.2"

[dev-dependencies]
assert_cmd = "2.2.2"
tempfile = "3.27.0"

[profile.release]
codegen-units = 1
lto = "thin"
